--- a/requirements.txt
+++ b/requirements.txt
@@ -76,8 +76,7 @@ ninja
 nltk
 numpy
 olefile
-opencv-python==4.5.5.64
-opencv-python-headless==4.5.5.64
+opencv-python-headless<4.3
 openpyxl
 packaging
 pandas
